# ROC_SHMEM

./: .gitignore  LICENSE  LICENSE.md  Makefile.am  README.md  autogen.sh  configure.ac
clients/examples/: CMakeLists.txt  GDB_README  barrier_all_tester.cpp  barrier_all_tester.hpp  barrier_tester.cpp  barrier_tester.hpp  broadcast_tester.cpp  broadcast_tester.hpp  collective_tester.cpp  collective_tester.hpp  driver.py  driver.sh  ping_pong_tester.cpp  ping_pong_tester.hpp  primitive_amo_tester.cpp  primitive_tester.cpp  primitive_tester.hpp  random_access_tester.cpp  reduction_tester.cpp  reduction_tester.hpp  shmem_ptr_tester.cpp  shmem_ptr_tester.hpp  swarm_tester.cpp  test_driver.cpp  tester.cpp  tester.hpp  tester_arguments.cpp  tester_arguments.hpp
clients/functional_tests/: CMakeLists.txt  alltoall_tester.cpp  alltoall_tester.hpp  amo_bitwise_tester.cpp  amo_bitwise_tester.hpp  amo_extended_tester.cpp  amo_extended_tester.hpp  amo_standard_tester.cpp  amo_standard_tester.hpp  barrier_all_tester.cpp  barrier_all_tester.hpp  barrier_tester.cpp  broadcast_tester.cpp  broadcast_tester.hpp  driver.sh  empty_tester.cpp  empty_tester.hpp  extended_primitives.cpp  extended_primitives.hpp  fcollect_tester.cpp  fcollect_tester.hpp  gdbrun  gdbscript  ping_pong_tester.cpp  ping_pong_tester.hpp  primitive_amo_tester.cpp  primitive_amo_tester.hpp  primitive_mr_tester.cpp  primitive_mr_tester.hpp  primitive_tester.cpp  primitive_tester.hpp  random_access_tester.cpp  random_access_tester.hpp  reduction_tester.cpp  reduction_tester.hpp  shmem_allLib_build_and_test.sh  shmem_ptr_tester.cpp  shmem_ptr_tester.hpp  swarm_tester.cpp  swarm_tester.hpp  (+15 more)
clients/sos-tests/: CMakeLists.txt  asym_alloc.cpp  atomic_inc.cpp  barrier.cpp  bcast.cpp  bcast_flood.cpp  big_reduction.cpp  bigget.cpp  bigput.cpp  broadcast_active_set.cpp  circular_shift.cpp  cxx_test_shmem_atomic_add.cpp  cxx_test_shmem_atomic_cswap.cpp  cxx_test_shmem_atomic_fetch.cpp  cxx_test_shmem_atomic_inc.cpp  cxx_test_shmem_g.cpp  cxx_test_shmem_p.cpp  cxx_test_shmem_test.cpp  cxx_test_shmem_wait_until.cpp  driver.sh  get1.cpp  get_nbi.cpp  global_exit.cpp  hello.cpp  lfinc.cpp  max_reduction.cpp  micro_unit_shmem.cpp  mt_a2a.cpp  mt_contention.cpp  pi.cpp  ping.cpp  put1.cpp  put_nbi.cpp  query_thread.cpp  reduce_active_set.cpp  reduce_in_place.cpp  shmalloc.cpp  shmem_test.cpp  sping.cpp  thread_wait.cpp  (+3 more)
clients/sos_tests/: CMakeLists.txt  asym_alloc.cpp  atomic_inc.cpp  barrier.cpp  bcast.cpp  bcast_flood.cpp  big_reduction.cpp  bigget.cpp  bigput.cpp  broadcast_active_set.cpp  circular_shift.cpp  cxx_test_shmem_atomic_add.cpp  cxx_test_shmem_atomic_cswap.cpp  cxx_test_shmem_atomic_fetch.cpp  cxx_test_shmem_atomic_inc.cpp  cxx_test_shmem_g.cpp  cxx_test_shmem_p.cpp  cxx_test_shmem_test.cpp  cxx_test_shmem_wait_until.cpp  driver.sh  get1.cpp  get_nbi.cpp  global_exit.cpp  hello.cpp  lfinc.cpp  many-ctx.cpp  max_reduction.cpp  micro_unit_shmem.cpp  mt_a2a.cpp  mt_contention.cpp  pi.cpp  ping.cpp  put1.cpp  put_ctx_mbw_mr.cpp  put_nbi.cpp  query_thread.cpp  reduce_active_set.cpp  reduce_in_place.cpp  shmalloc.cpp  shmem_team_b2b_collectives.cpp  (+9 more)
clients/sos_tests/build_configs/: debug  release
clients/unit_tests/: CMakeLists.txt  abql_block_mutex_gtest.cpp  abql_block_mutex_gtest.hpp  address_record_gtest.cpp  address_record_gtest.hpp  bin_gtest.cpp  bin_gtest.hpp  binner_gtest.cpp  binner_gtest.hpp  bitwise_gtest.cpp  bitwise_gtest.hpp  device_mutex_gtest.cpp  device_mutex_gtest.hpp  forward_list_gtest.cpp  forward_list_gtest.hpp  heap_memory_gtest.cpp  heap_memory_gtest.hpp  index_strategy_gtest.cpp  index_strategy_gtest.hpp  mpi_init_singleton_gtest.cpp  mpi_init_singleton_gtest.hpp  notifier_gtest.cpp  notifier_gtest.hpp  pow2_bins_gtest.cpp  pow2_bins_gtest.hpp  remote_heap_info_gtest.cpp  remote_heap_info_gtest.hpp  shmem_gtest.cpp  single_heap_gtest.cpp  single_heap_gtest.hpp  slab_heap_gtest.cpp  slab_heap_gtest.hpp  spin_ebo_block_mutex_gtest.cpp  spin_ebo_block_mutex_gtest.hpp  symmetric_heap_gtest.cpp  symmetric_heap_gtest.hpp
docs/: Doxyfile.in  Makefile.am
examples/: Makefile.am  driver.sh  test_driver.cpp  tests.hpp  util.cpp  util.h
include/: hdp_helper.hpp  ro_net.hpp  ro_net_internal.hpp  roc_shmem.hpp  transport.hpp
src/: Makefile.am  backend.cpp  backend.hpp  hdp_helper.hpp  ro_net.cpp  ro_net_gpu.cpp  roc_shmem.cpp  roc_shmem_gpu.cpp  stats.hpp  transport.cpp  util.cpp  util.hpp
src/gpu_ib/: gpu_ib.cpp  gpu_ib_gpu.cpp  gpu_ib_gpu_coll.cpp  gpu_ib_gpu_templates.hpp  gpu_ib_internal.hpp  rtn.cpp  rtn.hpp  rtn_gpu.cpp  rtn_help.cpp  rtn_internal.hpp  rtn_rocm.cpp  rtn_rocm.hpp  thread_policy.cpp  thread_policy.hpp
src/reverse_offload/: Makefile.am  ro_net.cpp  ro_net_gpu.cpp  ro_net_gpu_templates.hpp  ro_net_internal.hpp  transport.cpp  transport.hpp
util/: cscope-index.py
